--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -7,7 +7,7 @@
 Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed \cite{classen2017}: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information out of inner shell X-ray fluorescence.  
 IDI could, in theory, allow nanoscale resolution in three dimensions from few orientations and drastically increase the range of ultrashort X-ray FEL pulses applications. Nonetheless, in the only experimental implementation thus far, only the size of the focal spot of the FEL (>100\,nm) has been measured \cite{nakumura2020}.
 
-In the present work, steps towards realizing the spatial resolution potential are made: By developing a simulation framework, various parameters of the setup are identified as being crucial for experimental success. Most importantly, this includes the pulse duration, focal spot size, and sample thickness. Further, this work highlights the importance of proper detector alignment and identification and correction of possible misalignments, as well as the handling of detector artifacts. Finally, a photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented. These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
+In the present work, steps towards realizing the spatial resolution potential are made: By developing a simulation framework, various parameters of the setup are identified as being crucial for experimental success. Most importantly, this includes the pulse duration, focal spot size,  sample thickness and number of fluorescence photons. Further, this work highlights the importance of proper detector alignment and identification and correction of possible misalignment, as well as the handling of detector artifacts. Finally, a photon-counting method with reduced artifacts in the correlations based on a single-pixel maximum likelihood classification is presented. These insights have guided the design and analysis of an experiment performed at the SACLA FEL facility using 10\,fs X-ray pulses for fluorescence excitation.
 
 Here, the results of the previously reported imaging of the focus were reproduced by using iron and copper foils as a sample. The focal width in the vertical direction achieved by the \textit{100\,exa} nano-focusing system was determined by IDI  as (240$\pm$20)\,nm. From the low contrast observed, the number of independent modes overlaid in the measurement was estimated as >200.  As nanometer-scaled samples, spherical iron nanoparticles deposited in polymer matrices were used. The characterization of the prepared nanoparticle samples by small-angle scattering showed undesirable aggregation and reduced visibility of the structure factor.  From the recorded fluorescence speckle patterns, no features of the structure factor were recovered by the correlation analysis.  Additionally, the fluorescence patterns of thin gallium arsenide single crystal films were recorded.  An Analysis of the visible Kossel lines reduced the misalignment not corrected for to $\pm$0.2°. However, no Bragg peaks could be identified in the IDI reconstruction.
 Even though the goal of providing a proof of principle experiment for nanoscale resolution could not be achieved, this work may provide a basis for upcoming experiments.
