--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -327,7 +327,7 @@ The noise levels as estimated by the standard deviation over pixels outside the 
 		\caption{500\,nm iron foil}
 		\label{fig:fe500nmreco2d}
 	\end{subfigure}
-	\caption[Results iron foils]{\textbf{(a)} $g^2-1$ results for the 10\,\micrometer iron foil placed at the focus as well as outside the focus (along the X-ray beam) and the result obtained by regression on the nominal focus data with fixed true horizontal dimension. This is used to extrapolate the peak amplitude in the masked areas. \textbf{(b)} $g^2-1$ results for the 500\,nm Iron foil at focus as well as at two defocused positions. The SNR is low and the signal almost indistinguishable from noise, but the horizontal extent in reciprocal space is as expected larger. Due to the low SNR no reliable regression of the focal size can be performed}
+	\caption[Results iron foils]{\textbf{(a)} $g^2-1$ results for the 10\,\micrometer iron foil placed at the focus as well as outside the focus (along the X-ray beam) and the result obtained by regression on the nominal focus data with fixed true horizontal dimension. This is used to extrapolate the peak amplitude in the masked areas. \textbf{(b)} $g^2-1$ results for the 500\,nm Iron foil at focus as well as at two defocused positions. The SNR is low and the signal almost indistinguishable from noise, but the horizontal extent in reciprocal space is as expected larger. Due to the low SNR no reliable regression of the focal size can be performed.}
 	\label{fig:fereco2d}
 \end{figure}
 \begin{figure}
@@ -362,13 +362,13 @@ The noise levels as estimated by the standard deviation over pixels outside the 
 
 The mean number of counted signal photons per pixel after filtering is $0.03\pm0.01$ for the nanoparticle samples as well as the iron chloride reference sample, the number of images analyzed has been limited to 30,000 for each sample, with the exception of the "10\,nm in PS" sample only having 25,000 usable shots after filtering. At similar signal photon counts on the octal as observed for the foils on the dual detector, the peak in the spectrum at the energy of the FEL beam is more pronounced, leading to difficulties distinguishing higher numbers of photons. Hence, only one and two photon hits are used in the photon discretization (see \fref{fig:spectrum_nano} for an example).
 
-Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined, and in the results of the iron chloride sample having similar numbers of signal photons the effect of uncorrected detector artifacts could be seen. Neither seem to causes a strong correlation signal (see \fref{fig:resnano2d}). The strength of the noise as quantified by the standard deviation over pixels outside the center area of the 2d-reconstruction of the samples is (1.4$\pm$0.1)10$^{-4}$.
+Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined, and in the results of the iron chloride sample having similar numbers of signal photons the effect of uncorrected detector artifacts could be seen. Neither result in a strong correlation signal (see \fref{fig:resnano2d}). The strength of the noise as quantified by the standard deviation over pixels outside the center area of the 2d-reconstruction of the samples is (1.4$\pm$0.1)$\cdot$10$^{-4}$.
 
 In the radially averaged $g^2$ of the four different samples neither a feature corresponding to the distance of aggregated particles (as visible in the SAXS measurements)  nor a minimum at $q\approx4.5/r$, indicative of spherical samples, can be distinguished. 
 \FloatBarrier
 \subsection{Imaging Crystals}
 
-After applying the filtering, masking and corrections, the mean photon count considered as signal per pixel is 0.4-0.6 for both samples (a histogram is shown in \fref{fig:spectrum_gaas}), corresponding to $\approx 3*10^7$ photons in $4\pi$ and $\approx$1\% of the gallium atoms inside the focus emitting fluorescence, and $2*10^4$ images per sample can be used for further analysis.
+After applying the filtering, masking and corrections, the mean photon count considered as signal per pixel is 0.4-0.6 for both samples (a histogram is shown in \fref{fig:spectrum_gaas}), corresponding to $\approx 3\cdot10^7$ photons in $4\pi$ and $\approx$1\% of the gallium atoms inside the focus emitting fluorescence. Overall, $2\cdot10^4$ images per sample remain and can be used for further analysis.
 
 For the determination of the crystal orientation and detector offsets, the regression parameters are initialized with a 5.65\,\AA\, lattice constant, 9.25\,keV energy, 14\,cm detector distance and the result of a 2D cubic fit to the fluorescence background for the values of the x- and y-shifts. The  lines considered are shown in \fref{fig:kosselgaaslines} and listed in \fref{tab:kosselpeaks}. The results are shown in \fref{tab:kosselfit} as mean over the sets for each sample and maximum deviation from the mean as an error estimation. Overall, the alignment is precise up to at most than 0.6° rotation, except for rotation in the plane parallel to the crystal surface (designated "roll"), and 140\,pixel translation.
 
